--- a/Pages/CreateTest.cshtml
+++ b/Pages/CreateTest.cshtml
@@ -12,7 +12,9 @@
             <p>@Model.Message</p>
 
             <div class="mt-3">
-                <a asp-page="/Teacher/Dashboard" class="btn btn-primary">Vai alla Dashboard</a>
+                <a asp-page="/
+
+/Dashboard" class="btn btn-primary">Vai alla Dashboard</a>
                 <a href="javascript:location.reload()" class="btn btn-secondary ms-2">Crea un altro test</a>
             </div>
         </div>
