--- a/Pages/Globe/Index.cshtml
+++ b/Pages/Globe/Index.cshtml
@@ -807,7 +807,7 @@
         //         throw error;
         //     }
         // }
-                 d async function getCountryInfoFromGemini(countryName) {
+                 async function getCountryInfoFromGemini(countryName) {
             try {
                 console.log(`Recupero informazioni per: ${countryName}`);
 
@@ -967,11 +967,7 @@
                                 </div>
                             </div>
 
-                            <div class="text-center mt-4">
-                                <a href="/Quiz?country=${encodeURIComponent(country)}&questionCount=10&difficulty=medium" class="btn btn-primary btn-lg">
-                                    <i class="fas fa-question-circle me-2"></i>Inizia Quiz su ${country}
-                                </a>
-                            </div>
+                          
                         </div>
 
                         <style>
